<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:src="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/mLoginAppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:text="@string/app_name" />

    <!-- メールアドレス記入欄 -->
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_email">

        <EditText
            android:id="@+id/mLoginMailText"
            android:layout_width="300dp"
            android:layout_height="wrap_content" />
    </android.support.design.widget.TextInputLayout>

    <!-- パスワード記入欄 -->
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_password">

        <EditText
            android:id="@+id/mLoginPWText"
            android:layout_width="300dp"
            android:layout_height="wrap_content" />
    </android.support.design.widget.TextInputLayout>

    <!-- サインインボタン -->
    <Button
        android:id="@+id/mSignInBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/login_button" />

</LinearLayout>